<?xml version="1.0"?>
<package>
  <name>contact_control</name>
  <version>1.0.0</version>
  <description>The contact_control package</description>

  <maintainer email="alexvs@utexas.edu">Alex von Sternberg</maintainer>

  <!--   This software is licensed by Los Alamos National Security, LLC. Please see License.txt -->
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>move_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
